{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 46,
  "lineage": "31b2a1ef-79c8-b4b2-83fb-76cb0f69971d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-54b20da8",
            "domain": "vpc",
            "id": "eipalloc-09145b826e345d0e7",
            "network_interface": "eni-04eac6e764031c584",
            "private_dns": "ip-10-15-1-218.eu-west-3.compute.internal",
            "private_ip": "10.15.1.218",
            "public_dns": "ec2-15-188-20-161.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.20.161",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-06affc49a97c0c98d",
            "owner_id": "653633530545",
            "tags": {
              "Name": "eks-internet-gateway"
            },
            "vpc_id": "vpc-047757bf09ae73b45"
          },
          "depends_on": [
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09145b826e345d0e7",
            "id": "nat-0a065d78784b3bf06",
            "network_interface_id": "eni-04eac6e764031c584",
            "private_ip": "10.15.1.218",
            "public_ip": "15.188.20.161",
            "subnet_id": "subnet-0c956689b24c2927a",
            "tags": {
              "Name": "gw NAT"
            }
          },
          "depends_on": [
            "aws_eip.nat",
            "aws_internet_gateway.eks-igw",
            "aws_subnet.eks-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gtw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0025d6ca3aa056f6f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0a065d78784b3bf06",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0025d6ca3aa056f6f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.nat_gw",
            "aws_route_table.eks-private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0025d6ca3aa056f6f",
            "owner_id": "653633530545",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0a065d78784b3bf06",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route table for private subnets"
            },
            "vpc_id": "vpc-047757bf09ae73b45"
          },
          "depends_on": [
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-041a2816444687255",
            "owner_id": "653633530545",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06affc49a97c0c98d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-047757bf09ae73b45"
          },
          "depends_on": [
            "aws_internet_gateway.eks-igw",
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e47675f488298e8",
            "route_table_id": "rtb-041a2816444687255",
            "subnet_id": "subnet-0c956689b24c2927a"
          },
          "depends_on": [
            "aws_route_table.eks-public",
            "aws_subnet.eks-public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079a11390bca270ab",
            "route_table_id": "rtb-041a2816444687255",
            "subnet_id": "subnet-0de8501cda3fc4397"
          },
          "depends_on": [
            "aws_route_table.eks-public",
            "aws_subnet.eks-public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00092cda43071280d",
            "route_table_id": "rtb-041a2816444687255",
            "subnet_id": "subnet-0b5675abd018c4cbc"
          },
          "depends_on": [
            "aws_route_table.eks-public",
            "aws_subnet.eks-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks-private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c223a66cf7009cf9",
            "route_table_id": "rtb-0025d6ca3aa056f6f",
            "subnet_id": "subnet-09397e525f1b53dff"
          },
          "depends_on": [
            "aws_route_table.eks-private",
            "aws_subnet.eks-private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084afe5077613e344",
            "route_table_id": "rtb-0025d6ca3aa056f6f",
            "subnet_id": "subnet-08ce04eeeba2537ef"
          },
          "depends_on": [
            "aws_route_table.eks-private",
            "aws_subnet.eks-private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ca5f865778eac22",
            "route_table_id": "rtb-0025d6ca3aa056f6f",
            "subnet_id": "subnet-05ea3c658b2ff8494"
          },
          "depends_on": [
            "aws_route_table.eks-private",
            "aws_subnet.eks-private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:653633530545:security-group/sg-0e653f1e6b44023de",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e653f1e6b44023de",
            "ingress": [
              {
                "cidr_blocks": [
                  "213.58.201.38/32"
                ],
                "description": "Allow workstation to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b90e7e527c0b6946"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-eks-cluster",
            "name_prefix": null,
            "owner_id": "653633530545",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EKS - kubernetes master sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-047757bf09ae73b45"
          },
          "depends_on": [
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:653633530545:security-group/sg-0b90e7e527c0b6946",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b90e7e527c0b6946",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HPA to receive communication from the cluster control plane",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e653f1e6b44023de"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e653f1e6b44023de"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "eks-worker-node",
            "name_prefix": null,
            "owner_id": "653633530545",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-worker-node-sg",
              "kubernetes.io/cluster/eks-demo": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-047757bf09ae73b45"
          },
          "depends_on": [
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks-cluster-ingress-node-https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-1214013347",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e653f1e6b44023de",
            "self": false,
            "source_security_group_id": "sg-0b90e7e527c0b6946",
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.eks-cluster",
            "aws_security_group.eks-node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks-cluster-ingress-workstation-https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "213.58.201.38/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-283777196",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e653f1e6b44023de",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.eks-cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks-node-ingress-cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-414552174",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b90e7e527c0b6946",
            "self": false,
            "source_security_group_id": "sg-0e653f1e6b44023de",
            "to_port": 65535,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.eks-cluster",
            "aws_security_group.eks-node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks-node-ingress-hpa",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow HPA to receive communication from the cluster control plane",
            "from_port": 443,
            "id": "sgrule-1822752609",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b90e7e527c0b6946",
            "self": false,
            "source_security_group_id": "sg-0e653f1e6b44023de",
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.eks-cluster",
            "aws_security_group.eks-node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks-node-ingress-self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other",
            "from_port": 0,
            "id": "sgrule-717199066",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b90e7e527c0b6946",
            "self": false,
            "source_security_group_id": "sg-0b90e7e527c0b6946",
            "to_port": 0,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.eks-node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks-private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:653633530545:subnet/subnet-09397e525f1b53dff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.15.12.0/22",
            "id": "subnet-09397e525f1b53dff",
            "map_public_ip_on_launch": false,
            "owner_id": "653633530545",
            "tags": {
              "Name": "eks-private-subnet",
              "kubernetes.io/cluster/eks-demo": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-047757bf09ae73b45"
          },
          "depends_on": [
            "aws_vpc.eks",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:653633530545:subnet/subnet-08ce04eeeba2537ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.15.16.0/22",
            "id": "subnet-08ce04eeeba2537ef",
            "map_public_ip_on_launch": false,
            "owner_id": "653633530545",
            "tags": {
              "Name": "eks-private-subnet",
              "kubernetes.io/cluster/eks-demo": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-047757bf09ae73b45"
          },
          "depends_on": [
            "aws_vpc.eks",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:653633530545:subnet/subnet-05ea3c658b2ff8494",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.15.20.0/22",
            "id": "subnet-05ea3c658b2ff8494",
            "map_public_ip_on_launch": false,
            "owner_id": "653633530545",
            "tags": {
              "Name": "eks-private-subnet",
              "kubernetes.io/cluster/eks-demo": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-047757bf09ae73b45"
          },
          "depends_on": [
            "aws_vpc.eks",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks-public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:653633530545:subnet/subnet-0c956689b24c2927a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.15.0.0/22",
            "id": "subnet-0c956689b24c2927a",
            "map_public_ip_on_launch": false,
            "owner_id": "653633530545",
            "tags": {
              "Name": "eks-public-subnet",
              "kubernetes.io/cluster/eks-demo": "shared"
            },
            "vpc_id": "vpc-047757bf09ae73b45"
          },
          "depends_on": [
            "aws_vpc.eks",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:653633530545:subnet/subnet-0de8501cda3fc4397",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.15.4.0/22",
            "id": "subnet-0de8501cda3fc4397",
            "map_public_ip_on_launch": false,
            "owner_id": "653633530545",
            "tags": {
              "Name": "eks-public-subnet",
              "kubernetes.io/cluster/eks-demo": "shared"
            },
            "vpc_id": "vpc-047757bf09ae73b45"
          },
          "depends_on": [
            "aws_vpc.eks",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:653633530545:subnet/subnet-0b5675abd018c4cbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.15.8.0/22",
            "id": "subnet-0b5675abd018c4cbc",
            "map_public_ip_on_launch": false,
            "owner_id": "653633530545",
            "tags": {
              "Name": "eks-public-subnet",
              "kubernetes.io/cluster/eks-demo": "shared"
            },
            "vpc_id": "vpc-047757bf09ae73b45"
          },
          "depends_on": [
            "aws_vpc.eks",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:653633530545:vpc/vpc-047757bf09ae73b45",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.15.0.0/19",
            "default_network_acl_id": "acl-0d1ae96f3f31eeb26",
            "default_route_table_id": "rtb-05f4acef9aaaed314",
            "default_security_group_id": "sg-023ad043becf84d45",
            "dhcp_options_id": "dopt-9d2feaf4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-047757bf09ae73b45",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05f4acef9aaaed314",
            "owner_id": "653633530545",
            "tags": {
              "Name": "eks-vpc",
              "kubernetes.io/cluster/eks-demo": "shared"
            }
          }
        }
      ]
    }
  ]
}